# HelmholtzResonatorCalculator

./: .gitignore  .gitlab-ci.yml  README.md  aperture.py  example_01.json  example_01.step  example_01.stl  id_ed25519.pub  id_ed25519.pub.pub  main.py  medium.py  pyproject.toml  requirements.txt  simulation.py  simulation_parameters.py
.github/workflows/: deploy.yml
app_control/: __init__.py  forward.py  inverse.py  search_optimal.py
calculation/: aperture.py  geometry.py  medium.py  resonator.py  simulation.py  simulation_parameters.py
docs/: example_01.json
docs/source/: app_control.rst  calculation.rst  conf.py  gui_widgets.rst  index.rst  io_tools.rst  modules.rst  tests.calculation.rst  tests.rst
examples/: test.json  test3.json
gui_widgets/: GUIController.py  inputForm.py  resultView.py
io_tools/: __init__.py  examples.py  load_from_json.py
src/: .gitlab-ci.yml  cli.py  helmholtz_resonator_calculator.py  main.py
src/app_control/: __init__.py  forward.py  optimizer.py  search_optimal.py  start_gui.py
src/calculation/: __init__.py  aperture.py  geometry.py  medium.py  optimizer.py  resonator.py  simulation.py  simulation_parameters.py
src/gui_widgets/: GUIController.py  init.py  inputForm.py  mainWindow.py  resultView.py
src/io_tools/: __init__.py  examples.py  export_cad.py  save_to_json.py
tests/: test_resonator.py  test_simulation_parameters.py
tests/calcuation/: test_aperture.py  test_geometry.py
tests/calculation/: test_aperture.py  test_geometry.py  test_medium.py  test_resonator.py  test_simulation_parameters.py
(+14 files in other folders)
