[project]
name = "helmholtz_resonator_calculator"
version = "0.1.0"
description = "A tool that calculates the resonance frequency and absorbtion area for a given resonator geometry. It also suggests a geometry when given target frequency and -q-factor."
authors = [
    {name = "Rösch, Schön, van Dijk, Verhoeven"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.3.1,<3.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "scipy (>=1.16.0,<2.0.0)",
    "click (>=8.2.1,<9.0.0)",
    "pyqt6 (>=6.9.1,<7.0.0)",
    "traits (>=7.0.2,<8.0.0)",
    "traitsui (>=8.0.0,<9.0.0)",
    "cadquery (>=2.5.2,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
